# taal-finder

./: .gitignore  README.md  pyproject.toml
src/taal_finder/: __init__.py  __main__.py  audio.py  beats.py  cli.py  models.py  taal.py  viz.py
src/taal_finder/taals/: __init__.py  definitions.py
tests/: conftest.py  test_beats.py  test_models.py  test_taal.py  test_taal_definitions.py
