[project]
name = "taal-finder"
version = "0.1.0"
description = "Detect Indian classical taals from audio files"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "madmom",
    "numpy",
    "scipy",
    "soundfile",
    "typer",
    "pydantic",
    "rich",
]

[dependency-groups]
dev = [
    "ruff",
    "mypy",
    "pytest",
    "pytest-cov",
    "pre-commit",
]

[project.scripts]
taal-finder = "taal_finder.cli:app"

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",
    "W",
    "F",
    "I",
    "N",
    "UP",
    "B",
    "SIM",
    "TCH",
    "RUF",
    "PTH",
    "ERA",
    "TID",
]
ignore = [
    "E501",
]

[tool.ruff.lint.isort]
known-first-party = ["taal_finder"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/taal_finder"]
